Fix background image covers being overridden

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,7 +21,7 @@ body {
 }
 
 .event {
-  background-size: cover;
+  background-size: cover !important;
   border-radius: 10px;
   height: 500px;
   margin: 40px auto;
